Fix grid cell borders
The border sizes were previously uneven as two adjacent cells would
make 2 borders between them. This patch changes how cells are styled,
focusing on their position on the board.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,8 +71,17 @@ body {
   grid-template-columns: repeat(10, var(--grid-cell-size));
 }
 
-.gameboard > * {
-  border: 0.1rem solid black;
+.grid-cell {
+  border-right: 0.1rem solid black;
+  border-bottom: 0.1rem solid black;
+}
+
+.grid-top-cell {
+  border-top: 0.1rem solid black;
+}
+
+.grid-left-cell {
+  border-left: 0.1rem solid black;
 }
 
 .current-status {
